@@ -42,6 +42,7 @@ import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.stream.Stream;
 
+import io.meeds.news.model.*;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -89,12 +90,6 @@ import org.exoplatform.wiki.service.WikiService;
 import org.exoplatform.wiki.service.plugin.WikiDraftPageAttachmentPlugin;
 
 import io.meeds.news.filter.NewsFilter;
-import io.meeds.news.model.ArticleTarget;
-import io.meeds.news.model.News;
-import io.meeds.news.model.NewsDraftObject;
-import io.meeds.news.model.NewsLatestDraftObject;
-import io.meeds.news.model.NewsPageObject;
-import io.meeds.news.model.NewsPageVersionObject;
 import io.meeds.news.notification.plugin.MentionInNewsNotificationPlugin;
 import io.meeds.news.notification.plugin.PostNewsNotificationPlugin;
 import io.meeds.news.notification.plugin.PublishNewsNotificationPlugin;
@@ -175,7 +170,7 @@ public class NewsServiceImpl implements NewsService {
   public static final String       NEWS_METADATA_LATEST_DRAFT_OBJECT_TYPE = "newsLatestDraftPage";
 
   public static final String       EXTERNAL_PAGE                          = "externalPage";
-  
+
   public static final String       PAGE_REFERRED                          = "pageReferred";
 
   public static final String       DE_REFER_PAGE_ID                       = "deReferPageId";
@@ -356,6 +351,7 @@ public class NewsServiceImpl implements NewsService {
         updateNewsActivity(news, post, originalNews.isActivityPosted());
       }
       NewsUtils.broadcastEvent(NewsUtils.UPDATE_NEWS, updater, news);
+      NewsUtils.broadcastEvent(NewsUtils.UPDATE_PUBLISH_CONTENT, updater, new ContentPublishEvent(originalNews, news));
     }
     return news;
   }
@@ -655,9 +651,9 @@ public class NewsServiceImpl implements NewsService {
                                                                                     new NewsPageObject(NEWS_METADATA_PAGE_OBJECT_TYPE,
                                                                                                        news.getId(),
                                                                                                        null,
-                                                                                                       Long.parseLong(news.getSpaceId())))
-                                               .get(0);
+                                                                                                       Long.parseLong(news.getSpaceId()))).getFirst();
       if (metadataItem != null) {
+        NewsUtils.broadcastEvent(NewsUtils.VIEW_NEWS, userId, news);
         Map<String, String> properties = metadataItem.getProperties();
         if (properties == null) {
           properties = new HashMap<>();
@@ -689,7 +685,6 @@ public class NewsServiceImpl implements NewsService {
       LOG.error("Failed to mark news article " + news.getId() + " as read for current user", exception);
       return;
     }
-    NewsUtils.broadcastEvent(NewsUtils.VIEW_NEWS, userId, news);
   }
 
   /**
@@ -760,6 +755,7 @@ public class NewsServiceImpl implements NewsService {
     if (!canScheduleNews(news.getSpaceId(), currentIdentity, news)) {
       throw new IllegalArgumentException("User " + currentIdentity.getUserId() + " is not authorized to schedule news");
     }
+    News originalArticle = null;
     if (newsObjectType.equalsIgnoreCase(NewsObjectType.DRAFT.name())) {
       // Create news article with the publication state STAGED without posting
       // or publishing it ( displayed false news target)
@@ -769,7 +765,8 @@ public class NewsServiceImpl implements NewsService {
     } else if (newsObjectType.equalsIgnoreCase(NewsObjectType.EXISTING_PAGE.name())) {
       news = createArticleFromExistingPage(news, currentIdentity.getUserId());
     } else if (newsObjectType.equalsIgnoreCase(ARTICLE.name())) {
-      updateArticle(news, currentIdentity, NewsUtils.NewsUpdateType.SCHEDULE.name().toLowerCase());
+      originalArticle = getNewsArticleById(news.getId());
+      news = updateArticle(news, currentIdentity, NewsUtils.NewsUpdateType.SCHEDULE.name().toLowerCase());
     }
     if (news != null) {
       if (NewsUtils.canPublishNews(news.getSpaceId(), currentIdentity)) {
@@ -782,6 +779,11 @@ public class NewsServiceImpl implements NewsService {
       // set the url and the space url to the scheduled news
       news.setUrl(NewsUtils.buildNewsArticleUrl(news, currentIdentity.getUserId()));
       news.setSpaceUrl(NewsUtils.buildSpaceUrl(news.getSpaceId()));
+      if (originalArticle != null && !originalArticle.getPublicationState().equalsIgnoreCase(STAGED)) {
+        NewsUtils.broadcastEvent(NewsUtils.UPDATE_PUBLISH_CONTENT,
+                                 currentIdentity.getUserId(),
+                                 new ContentPublishEvent(originalArticle, news));
+      }
       return news;
     }
     return null;
@@ -931,7 +933,7 @@ public class NewsServiceImpl implements NewsService {
 
   @Override
   public void deleteVersionsByArticleIdAndLang(String id, String lang) throws Exception {
-    News article = getNewsArticleById(id);
+    News article = getNewsArticleByIdAndLang(id, lang);
     noteService.deleteVersionsByNoteIdAndLang(Long.parseLong(id), lang);
     NewsUtils.broadcastEvent(NewsUtils.REMOVE_ARTICLE_TRANSLATION, article.getAuthor(), article);
     String newsTranslationId = id.concat("-").concat(lang);
@@ -1076,7 +1078,7 @@ public class NewsServiceImpl implements NewsService {
         newsArticle.setProperties(newsArticlePage.getProperties());
         newsArticle.setLatestVersionId(pageVersion.getId());
         newsArticle.setIllustrationURL(NewsUtils.buildIllustrationUrl(newsArticlePage.getProperties(), newsArticle.getLang()));
-        
+
         buildNewArticleProperties(newsArticle, newsArticlePage, newsArticleCreator, space.getId(), pageVersion.getId(), false);
         // delete the draft
         deleteDraftArticle(draftNewsId, poster.getUserId());
@@ -1271,6 +1273,7 @@ public class NewsServiceImpl implements NewsService {
     // Broadcast events for gamification and analytics
     NewsUtils.broadcastEvent(NewsUtils.POST_NEWS_ARTICLE, news.getId(), news);
     NewsUtils.broadcastEvent(NewsUtils.POST_NEWS, news.getAuthor(), news);
+    NewsUtils.broadcastEvent(NewsUtils.CREATE_PUBLISH_CONTENT, poster, new ContentPublishEvent(null, news));
   }
 
   private void buildNewArticleProperties(News article,
@@ -1508,7 +1511,8 @@ public class NewsServiceImpl implements NewsService {
         if (properties.containsKey(SCHEDULE_POST_DATE) && StringUtils.isNotEmpty(properties.get(SCHEDULE_POST_DATE))) {
           draftArticle.setSchedulePostDate(properties.get(SCHEDULE_POST_DATE));
         }
-        if (properties.containsKey(UNPUBLISH_SCHEDULED_DATE) && StringUtils.isNotEmpty(properties.get(UNPUBLISH_SCHEDULED_DATE))) {
+        if (properties.containsKey(UNPUBLISH_SCHEDULED_DATE)
+            && StringUtils.isNotEmpty(properties.get(UNPUBLISH_SCHEDULED_DATE))) {
           draftArticle.setScheduleUnpublishDate(properties.get(UNPUBLISH_SCHEDULED_DATE));
         }
         if (properties.containsKey(PUBLISHED) && StringUtils.isNotEmpty(properties.get(PUBLISHED))) {
@@ -1612,7 +1616,7 @@ public class NewsServiceImpl implements NewsService {
                           })
                           .toList();
   }
-  
+
   private List<News> getMyPostedArticles(NewsFilter filter, Identity currentIdentity) throws Exception {
     MetadataFilter metadataFilter = new MetadataFilter();
     metadataFilter.setMetadataName(NEWS_METADATA_NAME);
@@ -2060,9 +2064,11 @@ public class NewsServiceImpl implements NewsService {
                                                            null,
                                                            Long.parseLong(space.getId()));
         List<MetadataItem> metadataItems = metadataService.getMetadataItemsByMetadataAndObject(NEWS_METADATA_KEY, newsPageObject);
+        
         if (metadataItems.isEmpty()) {
           return null;
         }
+        
         MetadataItem metadataItem = metadataItems.getFirst();
         buildArticleProperties(news, currentUsername, metadataItem);
         news.setDeleted(articlePage.isDeleted());
@@ -2193,7 +2199,7 @@ public class NewsServiceImpl implements NewsService {
   }
 
   private String parseAndNormalizeScheduleDate(String date, String timeZoneId) {
-    if(StringUtils.isBlank(date) || date.equals("0")) {
+    if (StringUtils.isBlank(date) || date.equals("0")) {
       return null;
     }
     ZoneId userTimeZone = StringUtils.isBlank(timeZoneId) ? ZoneId.of("UTC") : ZoneId.of(timeZoneId);
@@ -2294,7 +2300,7 @@ public class NewsServiceImpl implements NewsService {
       if (draftPage != null) {
         deleteDraftArticle(draftPage.getId(), draftPage.getAuthor());
       }
-      NewsUtils.broadcastEvent(NewsUtils.ADD_ARTICLE_TRANSLATION, versionCreator, news);
+      NewsUtils.broadcastEvent(NewsUtils.ADD_ARTICLE_TRANSLATION, versionCreator.getUserId(), news);
       String newsTranslationId = news.getId().concat("-").concat(news.getLang());
       indexingService.index(NewsIndexingServiceConnector.TYPE, newsTranslationId);
       updateArticlePermissions(List.of(space), news);
@@ -2327,8 +2333,11 @@ public class NewsServiceImpl implements NewsService {
     }
     NewsUtils.broadcastEvent(NewsUtils.UPDATE_CONTENT_PERMISSIONS, this, updateContentPermissionEventListenerData);
   }
+
   private void broadcastUnScheduleArticleEvent(News unscheduledArticle, String createdDraftId) {
-    String unscheduledPageVersionId = noteService.getPublishedVersionByPageIdAndLang(Long.parseLong(unscheduledArticle.getId()), unscheduledArticle.getLang()).getId();
+    String unscheduledPageVersionId = noteService.getPublishedVersionByPageIdAndLang(Long.parseLong(unscheduledArticle.getId()),
+                                                                                     unscheduledArticle.getLang())
+                                                 .getId();
     if (unscheduledPageVersionId != null) {
       Map<String, String> eventData = new HashMap();
       eventData.put("draftPageId", createdDraftId);
